--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
 </header>
 <section class="hero">
     <div class="content">
-        <h1>Hello, I'm Marco Fruto</h1>
+        <h1>Hello, I'm John Mark Fruto</h1>
         <p>BACHELOR OF SCIENCE IN INFORMATION TECHNOLOGY <br>1ST YEAR BLOCK B.</p>
 
         <div class="buttons">
@@ -361,7 +361,7 @@
     <h2><i class="fas fa-briefcase"></i> Activities</h2>
     <p>AUTOBIOGRAPHY</p>
     <div>
-        <a href="Life of Marco Fruto.docx" download><i class="fas fa-download"></i> Download My DOCX</a>
+        <a href="Life of John Mark Fruto.docx" download><i class="fas fa-download"></i> Download My DOCX</a>
     </div>
 </section>
 
@@ -372,7 +372,7 @@
 </section>
 
 <footer>
-    <p>&copy; 2024 Marco Fruto. All Rights Reserved.</p>
+    <p>&copy; 2024 John Mark Fruto. All Rights Reserved.</p>
 </footer>
 
 </body>
