--- a/index.html
+++ b/index.html
@@ -359,9 +359,11 @@
 
 <section class="activities" id="activities">
     <h2><i class="fas fa-briefcase"></i> Activities</h2>
-    <p>AUTOBIOGRAPHY</p>
     <div>
-        <a href="Life of John Mark Fruto.docx" download><i class="fas fa-download"></i> Download My DOCX</a>
+        <a href="Life of John Mark Fruto.docx" download><i class="fas fa-download"></i> AUTOBIOGRAPHY</a>
+    </div>
+    <div>
+        <a href="https://sg.docworkspace.com/d/sIA7DpK3KAZmD7rsG?sa=601.1123" download><i class="fas fa-book-open"></i> PEOPLE & AGRICULTURE REPORT</a>
     </div>
 </section>
 
